# pr-flow

./: .gitignore  AGENTS.md  README.md  biome.jsonc  doctor.config.json  index.html  knip.jsonc  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  vitest.setup.ts
.claude/skills/: pr-validity  split-pr
.github/workflows/: e2e.yml  lint.yml  react-doctor.yml  release.yml  test.yml
apps/design-lab/: index.html  package.json  vite.config.ts
apps/desktop/: doctor.config.json  index.html  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts  vitest.setup.ts
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: accounts.rs  auth.rs  commands.rs  github.rs  gitlab.rs  lib.rs  main.rs  platform.rs
apps/web/: astro.config.mjs  package.json  vitest.config.ts  wrangler.jsonc
docs/: ARCHITECTURE.md  BACKLOG.md  DESIGN.md  FEATURE_PLANS.md  MONOREPO.md  RELEASING.md  RUST.md  TESTING.md  USE-EFFECT-AUDIT.md
e2e/: README.md  bridge.ts  comment-delete.spec.ts  comment-edit.spec.ts  composer.spec.ts  drawer-comment.spec.ts  find-perf.spec.ts  fixtures.ts  inbox-ux.spec.ts  inbox.spec.ts  multiline-comment-highlight.spec.ts  multiline.spec.ts  occurrences.spec.ts  open-perf.spec.ts  palette.spec.ts  release-history.spec.ts  review.spec.ts  scanability.spec.ts  scroll-perf.spec.ts  test.ts  threads.spec.ts  tooltips.spec.ts  types.ts  viewed.spec.ts  whats-new.spec.ts
e2e/specs/: auth.spec.ts  caching.spec.ts  comments.spec.ts  inbox.spec.ts  keyboard.spec.ts  perf.spec.ts  review.spec.ts
scripts/: cleanup-comments.mjs  strip-jsx-comments.mjs  strip-member-docs.mjs
skills/pr-validity/: SKILL.md
skills/split-pr/: SKILL.md
src/: App.tsx  app.tsx  index.css  main.tsx  quiet.css  types.ts
src-tauri/: .env.example  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: accounts.rs  accounts_tests.rs  auth.rs  commands.rs  commands_tests.rs  github.rs  github_tests.rs  gitlab.rs  http.rs  http_tests.rs  lib.rs  model.rs  platform.rs  snapshot.rs  storage.rs  update.rs
src-tauri/src/platform/: github.rs  github_tests.rs  gitlab.rs  gitlab_tests.rs
src-tauri/src/snapshot/: extract.rs  extract_tests.rs  service.rs  service_tests.rs  store.rs  store_tests.rs
src/components/: CommandPalette.tsx  Markdown.tsx  StatusBar.tsx  TokenGate.tsx  UpdatePrompt.tsx  command-palette.tsx  global-search.tsx  help-overlay.tsx  issue-tracker-dialog.tsx  markdown.tsx  release-history.tsx  review-notifier.tsx  token-gate.tsx  update-prompt.tsx  whats-new.tsx
src/hooks/: use-armed-ring.ts  use-comments.ts  use-file-expansion.ts  use-inbox-detail-nudge.ts  use-inbox.ts  use-viewed.ts  (+9 more)
(+263 files in other folders)
