[package]
name = "pr-flow"
version = "0.1.0"
description = "PR Flow — a keyboard-first, cache-first GitHub pull request reviewer"
authors = ["Paulius Krutkis"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pr_flow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
tokio = { version = "1", features = ["rt"] }
# Image diffs: file blobs are shipped to the webview as base64 data URLs.
base64 = "0.22"
dotenvy = "0.15"
# Auto-update. PR Flow is a desktop-only app, so this stays a plain dependency.
tauri-plugin-updater = "2"
